# sl-5-9-openmsl-qc-opendrive

./: LICENSE  LICENSE.md  README.md  checker_bundle_doc.md  openmsl_qc_config_xodr.xml  pyproject.toml
manifest_examples/: linux_xodr_manifest.json  windows_xodr_manifest.json
openmsl_qc_opendrive/: __init__.py  __main__.py  basic_preconditions.py  constants.py  main.py  version.py
openmsl_qc_opendrive/checks/: __init__.py
openmsl_qc_opendrive/checks/geometry/: __init__.py  road_geometry_length.py  road_geometry_parampoly3_attributes.py  road_min_length.py
openmsl_qc_opendrive/checks/linkage/: __init__.py  crg_reference.py
openmsl_qc_opendrive/checks/semantic/: __init__.py  junction_connection_lane_link_id.py  junction_connection_lane_linkage_order.py  junction_connection_road_linkage.py  junction_driving_lanes_continue.py  road_lane_id_order.py  road_lane_link_id.py  road_lane_property_sOffset.py  road_lane_type_none.py  road_lane_width.py  road_lanesection_min_length.py  road_lanesection_s.py  road_link_backward.py  road_link_id.py  road_object_position.py  road_object_size.py  road_signal_object_lane_linkage.py  road_signal_position.py  road_signal_size.py
openmsl_qc_opendrive/checks/statistic/: __init__.py  statistic.py
openmsl_qc_opendrive/checks/tool_compatibility_checks/: __init__.py  road_type_vs_speed_limit.py
tests/: test_geometry_checks.py  test_semantic_object_size.py  test_setup.py  test_utils.py
tests/data/road_object_size/: road_object_size_no_outline_no_height_v1_7.xodr  road_object_size_outline_v1_5.xodr  (+1 more)
